# embervault

./: Cargo.toml
migrations/2026-04-19-083523-0000_create_tags/: down.sql  up.sql
migrations/2026-04-20-000453-0000_tag_groups_and_aliases/: down.sql  up.sql
migrations/2026-04-20-010159-0000_cyclical_tag_detection/: down.sql  up.sql
src/: main.rs
src/app/: display_screen.rs  gallery_screen.rs  ingest_screen.rs  mod.rs  tag_screen.rs  title_screen.rs
src/app/title_screen/: mod.rs  search_ordering_widget.rs  search_widget.rs
src/db/: mod.rs  schema.rs
src/types/: content.rs  mod.rs  search.rs
src/types/search/: mod.rs  order.rs
