[package]
name = "embervault"
version = "0.1.0"
authors = ["Cameron Barnes <cameron_barnes@outlook.com>"]
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Personally not a big fan of this warning/error, we're going to exclude it from pedantic
module_name_repetitions = "warn"

[profile.release]
opt-level = 3 # change to s to reduce binary size with a performance tradeoff
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "lazy", "image", "advanced"] }
iced_drop = { version = "0.2", features = ["helpers"] }

itertools = "0.14"
tracing = "0.1.44"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }

pq-sys = { version = "0.7", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
diesel = { version = "2.3", features = ["postgres", "serde_json"] }
diesel_migrations = "2.3"
postgresql_embedded = { version = "0.20", features = ["blocking"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0" # This should be used with custom error types any time the error needs to contain data that we want to use
strum = { version = "0.28.0", features = ["derive"] }

# Above this is stuff that's almost always going to be wanted, bellow is more situational
human-panic = "2.0" # Optional, but recommended when sharing with end users
#clap = { version = "4.5", features = ["derive"] }

# Enable one of the following if this program uses hashmaps
#rustc-hash = "2.0" # Poor quality but very high integer performance
ahash = "0.8" # Should be used most of the time instead of the default HashMap implementation

#Enable if this program uses Mutex
#parking_lot = "0.12"
